--- a/synchronized_panels.css
+++ b/synchronized_panels.css
@@ -76,16 +76,16 @@ body {
   margin: 0;
   padding: 0;
   width: 100vw;
+  overflow-x: scroll;
   overflow-y: scroll;
 }
 
 #image-hilite {
-  display: none;
 
-  top: 20px;
+  top: 0px;
   left: 0;
   width: 100%;
-  height: 70px;
+  height: 50px;
   pointer-events: none;
   background-color: aquamarine;
   z-index: 1;
@@ -116,11 +116,11 @@ body {
   overflow-y: scroll;
 
   white-space: nowrap;
-  overflow-x: hidden;
+  overflow-x: scroll;
 }
 
 .line-div {
-  font-size: 30px;
+  font-size: 28px;
   line-height: 50px;
 
   white-space: nowrap;
