--- a/synchronized_panels.css
+++ b/synchronized_panels.css
@@ -15,7 +15,7 @@ body {
 }
 
 #chooser-panel {
-  height: 4vh;
+  height: 6vh;
 
   display: flex;
   flex-direction: row;
@@ -24,51 +24,44 @@ body {
 }
 
 .chooser-button {
-  height: 4vh;
-  width: height;
+  height: 6vh;
+  width: 4vw;
   font-size: 3vh;
   margin-left: 1vw;
   margin-right: 1vw;
 }
 
-#data-dir-path {
-  width: 35vw;
+.chooser-value {
   font-size: min(2.5vh, 1.7vw);
   border-width: 2px;
-  margin-left: 1vw;
+  margin-left: 0;
   margin-right: 1vw;
   background-color: #f0f0f0;
+
+  display: flex;
+  align-items: center;
+}
+
+#data-dir-path {
+  width: 35vw;
 }
 
 #image-file-path {
   width: 25vw;
-  font-size: min(2.5vh, 1.7vw);
-  border-width: 2px;
-  margin-left: 1vw;
-  background-color: #f0f0f0;
 }
 
 #text-file-path {
   width: 25vw;
-  font-size: min(2.5vh, 1.7vw);
-  border-width: 2px;
-  margin-left: 1vw;
-  background-color: #f0f0f0;
 }
 
 #edited-text-file-path {
   width: 30vw;
-  font-size: min(2.5vh, 1.7vw);
-  border-width: 2px;
-  margin-left: 1vw;
-  background-color: #f0f0f0;
 }
 
 #image-panel {
-  margin: 0;
   padding: 0;
   border: 4px;
-  height: 47vh;
+  height: 46vh;
   overflow-y: auto;
 }
 
@@ -84,8 +77,8 @@ body {
 #image-hilite {
 
   top: 0px;
-  left: 0;
-  width: 100%;
+  left: 5vw;
+  width: 90vw;
   height: 50px;
   pointer-events: none;
   background-color: aquamarine;
@@ -98,10 +91,8 @@ body {
   margin: 0;
   padding: 0;
 
-  border: 4px;
-
   width: 90vw;
-  height: 47vh;
+  height: 46vh;
 
   position: relative;
   overflow-y: hidden;
@@ -111,6 +102,9 @@ body {
   justify-content: center;
   align-items: center;
 
+  background-color:lavender;
+  border-width: 4px;
+  border-color: black;
 }
 
 #text-container {
@@ -142,30 +136,67 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   padding: 0;
   width: 5vw;
-  height: 100%;
+  height: 67%;
 }
 
 .icon {
-  width: 100%;
-  height: auto;
-  display: block;;
-  margin: 1vw;
+  width: 4vh;
+  height: 4vh;
+  display: block;
+  margin: 0;
+  padding: 0;
 
-  padding: 10px 20px;
   border: none;
   background-color: #f0f0f0;
   border-radius: 5px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
   transition: all 0.2s ease;
   cursor: pointer;
-  font-size: 36px;
+  font-size: 2vh;
 }
 
 .icon.active {
   box-shadow: inset 2px 2px 5px rgba(0, 0, 0, 0.2);
   transform: translateY(2px);
   background-color: #ddd;  
+}
+
+#settings-panel {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0;
+  width: 5vw;
+  height: 50%;
+  margin-top: 0;
+  margin-bottom: auto;
+}
+
+#speech-speed {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 4vw;
+}
+
+#speech-speed-icon {
+  width: 1.5vw;
+  height: 1.5vw;
+}
+
+#speech-speed-spin-box {
+  margin-top: 0.25vw;
+  width: 3.5vw;
+  height: 1.5vw;
+}
+
+#speech-interline-pause {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 4vw;
 }
