--- a/synchronized_panels.css
+++ b/synchronized_panels.css
@@ -14,6 +14,15 @@ body {
   overflow-y: none;
 }
 
+#upper-panel {
+  padding: 0;
+  border: 4px;
+  height: 46vh;
+
+  display: flex;
+  flex-direction: row;
+}
+
 #chooser-panel {
   height: 6vh;
 
@@ -59,17 +68,14 @@ body {
 }
 
 #image-panel {
-  padding: 0;
-  border: 4px;
-  height: 46vh;
+  left: 5vw;
+  width: 90vw;
   overflow-y: auto;
 }
 
 #image {
-  margin-left: 5vw;
-  margin-right: 5vw;
   padding: 0;
-  width: 90vw;
+  width: 100%;
   overflow-x: scroll;
   overflow-y: scroll;
 }
@@ -77,8 +83,7 @@ body {
 #image-hilite {
 
   top: 0px;
-  left: 5vw;
-  width: 90vw;
+  width: 100%;
   height: 50px;
   pointer-events: none;
   background-color: aquamarine;
@@ -171,32 +176,35 @@ body {
   justify-content: space-evenly;
   padding: 0;
   width: 5vw;
-  height: 50%;
+  top: 50%;
+  height: 100%;
   margin-top: 0;
   margin-bottom: auto;
 }
 
-#speech-speed {
+.settings-item {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 4vw;
 }
 
-#speech-speed-icon {
+.settings-heading-icon {
   width: 1.5vw;
   height: 1.5vw;
 }
 
-#speech-speed-spin-box {
+.settings-heading-text {
+  width: 100%;
+  height: 1.5vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.settings-value {
   margin-top: 0.25vw;
   width: 3.5vw;
   height: 1.5vw;
-}
-
-#speech-interline-pause {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 4vw;
 }
