--- a/src/renderer/synchronized_panels.css
+++ b/src/renderer/synchronized_panels.css
@@ -96,7 +96,7 @@ body {
   margin: 0;
   padding: 0;
 
-  width: 90vw;
+  width: 95vw;
   height: 46vh;
 
   position: relative;
@@ -120,12 +120,34 @@ body {
   overflow-x: scroll;
 }
 
+.line-container {
+  width: 95vw;
+  height: 50px;
+  margin: 0;
+  padding: 0;
+
+  display: flex;
+  flex-direction: row;
+}
+
 .line-div {
+  width: 90vw;
   font-size: min(28px, 2.1vw);
   line-height: 50px;
 
   white-space: nowrap;
   overflow-x: hidden;
+}
+
+.line-state {
+  width: 5vw;
+  height: 50px;
+  margin: 0;
+  padding: 0;
+  font-size: min(28px, 2.1vw);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .hilite {
