--- a/src/renderer/synchronized_panels.css
+++ b/src/renderer/synchronized_panels.css
@@ -70,25 +70,33 @@ body {
 #image-panel {
   position: relative;
   width: 90vw;
-  overflow-y: auto;
+  height: 46vh;
+}
+
+#image-container {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 #image {
   padding: 0;
+  margin: 0;
+  top: 0;
   width: 100%;
-  overflow-x: scroll;
-  overflow-y: scroll;
 }
 
 #image-hilite {
   top: 0;
-  left: 5vw;
+  left: 0;
   width: 90vw;
   height: 50px;
   pointer-events: none;
   background-color: aquamarine;
   z-index: 1;
-  position: absolute;
+  position: sticky;
   opacity: 20%;
 }
 
@@ -238,6 +246,7 @@ body {
 #magnifier {
   position: absolute;
   pointer-events: none;
+  top: 0;
   width: 50px;
   height: 50px;
   border-radius: 50%;
