--- a/src/renderer/synchronized_panels.css
+++ b/src/renderer/synchronized_panels.css
@@ -245,8 +245,8 @@ body {
 
 #magnifier {
   position: absolute;
-  pointer-events: none;
   top: 0;
+  pointer-events: none;
   width: 50px;
   height: 50px;
   border-radius: 50%;
@@ -259,5 +259,6 @@ body {
 
 #magnified-image {
   position: absolute;
-  /* No width/height here, it's scaled */
+  width: 100%;
+  height: 100%;
 }
